[package]
name = "foundry-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-dyn-abi = { version = "0.7.2", features = ["arbitrary", "eip712"] }
alloy-json-abi = "0.7.2"
alloy-sol-types = { version = "0.7.2", default-features = false, features = ["json"]}
alloy-primitives = { version = "0.7.2", features = ["serde", "getrandom", "arbitrary", "rlp"] }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", features = ["reqwest", "reqwest-rustls-tls"] }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "4ecb7d8", default-features = false }

revm = { version = "9", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
    "optimism",
    "c-kzg",
] }
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "0d3f1f4", features = [
    "serde",
] }

arrayvec = "0.7"
auto_impl = "1"
derive_more = "0.99"
eyre = "0.6"
futures = "0.3"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
itertools = "0.13"
once_cell = "1"
parking_lot = "0.12"
rustc-hash = "1.1"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
tracing = "0.1"
url = "2"

reqwest = { version = "0.12", default-features = false }
tower = "0.4"
